force-app/main/default/objects/Asana_Field_Mapping__mdt/Asana_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Asana Field Mapping</label>
    <pluralLabel>Asana Field Mappings</pluralLabel>
</CustomObject>