force-app/main/default/objects/Asana_Field_Mapping__mdt/fields/Asana_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Asana_Field_API_Name__c</fullName>
    <label>Asana Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>