force-app/main/default/objects/Asana_Field_Mapping__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Text</fullName><default>true</default><label>Text</label></value>
            <value><fullName>Boolean</fullName><default>false</default><label>Boolean</label></value>
            <value><fullName>Date</fullName><default>false</default><label>Date</label></value>
            <value><fullName>Number</fullName><default>false</default><label>Number</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>