force-app/main/default/objects/Asana_Field_Mapping__mdt/fields/Value_Map__c.field-meta.xml
<CustomField>
    <fullName>Value_Map__c</fullName>
    <label>Value Map (JSON)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>